Fixed gap btween laptop breakpoints

--- a/src/assets/toolkit/styles/partials/_mixins.scss
+++ b/src/assets/toolkit/styles/partials/_mixins.scss
@@ -37,7 +37,7 @@
 }
 
 @mixin show-on-large-screen {
-  @include breakpoint(laptop) {
+  @media (max-width: 63.9375em) {
     display: none;
   }
 }
